--- a/scorer/templates/scorer/container.html
+++ b/scorer/templates/scorer/container.html
@@ -45,7 +45,7 @@
 
             function loadpodium(){ $("#page").load('/scoring/podium/').fadeIn(2000); }
             function loadrank(){ $("#page").load('/scoring/rank/').fadeIn(2000); }
-            function loadrank(){ $("#page").load('/scoring/top3/').fadeIn(2000); }
+            function loadtop3(){ $("#page").load('/scoring/top3/').fadeIn(2000); }
 
             function blankpage(){ $("#page").fadeOut(2000); }
         </script>
